<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstructuraBase.ItemEquipos2">


    <TextView
        android:id="@+id/tv_selequ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_selequ2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="165dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/cb_e5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/cb_e5"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cb_e6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_e6"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cb_e7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_e7"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cb_e8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_e8"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cb_e9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_e9"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_e2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="SelEquipo2"
        android:text="@string/bt_e2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>