<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstructuraBase.ItemProyectos">

    <TextView
        android:id="@+id/tv_selpro"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginTop="104dp"
        android:text="@string/tv_selpro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="187dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelProyecto"
            android:text="@string/bt_p1" />

        <Button
            android:id="@+id/bt_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelProyecto"
            android:text="@string/bt_p2" />

        <Button
            android:id="@+id/bt_p3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelProyecto"
            android:text="@string/bt_p3" />

        <Button
            android:id="@+id/bt_p4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelProyecto"
            android:text="@string/bt_p4" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>