<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstructuraBase.ItemDocumentacionSeguridad">

    <TextView
        android:id="@+id/tv_seldocseg"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_seldocseg"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="232dp"
        android:layout_height="289dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_ds1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelDocumentacionSeg"
            android:text="@string/bt_ds1" />

        <Button
            android:id="@+id/bt_ds2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelDocumentacionSeg"
            android:text="@string/bt_ds2" />

        <Button
            android:id="@+id/bt_ds3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelDocumentacionSeg"
            android:text="@string/bt_ds3" />

        <Button
            android:id="@+id/bt_ds4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelDocumentacionSeg"
            android:text="@string/bt_ds4" />

        <Button
            android:id="@+id/bt_ds5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_ds5" />

        <Button
            android:id="@+id/bt_ds6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelDocumentacionSeg"
            android:text="MÚLTIPLES REPORTES" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>