<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstructuraBase.ItemDocumentacionOperaciones2">

    <TextView
        android:id="@+id/tv_seldocope2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_seldocope"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="239dp"
        android:layout_height="271dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_do2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelDocumentacion2"
            android:text="@string/bt_do1" />

        <Button
            android:id="@+id/bt_do2_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelDocumentacion2"
            android:text="@string/bt_do3" />

        <Button
            android:id="@+id/bt_do2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelDocumentacion2"
            android:layout_marginBottom="36dp"
            android:text="@string/bt_do4" />

        <Button
            android:id="@+id/bt_do2_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_doi5" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>