<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstructuraBase.ItemTecnologias">


    <TextView
        android:id="@+id/tv_seltec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_seltec"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelTecnologia"
            android:text="@string/bt_t1" />

        <Button
            android:id="@+id/bt_t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelTecnologia"
            android:text="@string/bt_t2" />

        <Button
            android:id="@+id/bt_t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SelTecnologia"
            android:text="@string/bt_t3" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>